--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Kanna-BOT",
+    "name": "BOT-MD",
     "version": "3.0.0",
     "description": "RPG WhatsApp BOT",
     "main": "index.js",
